--- a/grokking-polysemy.cabal
+++ b/grokking-polysemy.cabal
@@ -24,10 +24,15 @@ extra-source-files:
 
 executable grokking-polysemy
   main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
 
   -- other-modules:
   -- other-extensions:
-  build-depends:    base ==4.13.*
+  build-depends:
+      base      >=4.13 && <4.14
+    , polysemy
+
+  --, polysemy-plugin
 
   -- hs-source-dirs:
   default-language: Haskell2010
