--- a/package.yaml
+++ b/package.yaml
@@ -2,6 +2,9 @@ library:
   source-dirs: src
 dependencies:
 - base >= 4.7 && < 5
+- persistent
+- persistent-sqlite
+- persistent-template
 - polysemy
 - polysemy-plugin
 - random
