--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,9 @@
 library:
   source-dirs: src
+  ghc-options:
+    - -Wall
+    - -Wno-name-shadowing
+
 dependencies:
 - base >= 4.7 && < 5
 - postgresql-simple
